tests/expectations/compiler/core/algorithms/pedersen64_commit_to_group.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `address` was found.
    --> compiler-test:27:52
     |
  27 |         let a: group = Pedersen64::commit_to_group(addr_value, scalar_value);
     |                                                    ^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `field` was found.
    --> compiler-test:29:52
     |
  29 |         let c: group = Pedersen64::commit_to_group(field_value, scalar_value);
     |                                                    ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `group` was found.
    --> compiler-test:30:52
     |
  30 |         let d: group = Pedersen64::commit_to_group(group_value, scalar_value);
     |                                                    ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `scalar` was found.
    --> compiler-test:37:52
     |
  37 |         let m: group = Pedersen64::commit_to_group(scalar_value, scalar_value);
     |                                                    ^^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `Foo` was found.
    --> compiler-test:39:52
     |
  39 |         let n: group = Pedersen64::commit_to_group(Foo { a: 1u16, b: 1u16 }, scalar_value);
     |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^
"""]
